// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`export all from module 1`] = `
[
  {
    "docs": [],
    "file": "/module.ts",
    "id": "variable.foo",
    "kind": "variable",
    "line": 1,
    "name": "foo",
    "signature": "const foo: string;",
  },
]
`;

exports[`export all from module as renamed 1`] = `
[
  {
    "declarations": [
      {
        "docs": [],
        "file": "/module.ts",
        "id": "namespace.myModule.variable.foo",
        "kind": "variable",
        "line": 1,
        "name": "foo",
        "signature": "const foo: string;",
      },
    ],
    "docs": [],
    "file": "/module.ts",
    "id": "namespace.myModule",
    "kind": "namespace",
    "line": 1,
    "name": "myModule",
    "signature": "module "module.ts" {}",
  },
]
`;

exports[`export const array destructure 1`] = `[]`;

exports[`export const assignment list 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 1,
    "name": "bar",
    "signature": "const bar: number;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.foo",
    "kind": "variable",
    "line": 1,
    "name": "foo",
    "signature": "const foo: number;",
  },
]
`;

exports[`export const object destructure 1`] = `[]`;

exports[`export default anonymous class 1`] = `
[
  {
    "constructors": [],
    "docs": [],
    "file": "/index.ts",
    "id": "class.default",
    "kind": "class",
    "line": 1,
    "methods": [],
    "name": "default",
    "properties": [],
    "signature": "class {}",
  },
]
`;

exports[`export default anonymous function 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.default",
    "kind": "function",
    "line": 1,
    "name": "default",
    "signature": "default: () => void;",
  },
]
`;

exports[`export default anonymous generator function 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.default",
    "kind": "function",
    "line": 1,
    "name": "default",
    "signature": "default: () => Generator<never, void, unknown>;",
  },
]
`;

exports[`export default as renamed from module 1`] = `
[
  {
    "docs": [],
    "file": "/module.ts",
    "id": "function.myDefault",
    "kind": "function",
    "line": 1,
    "name": "myDefault",
    "signature": "myDefault: () => void;",
  },
]
`;

exports[`export default expression 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.default",
    "kind": "variable",
    "line": 1,
    "name": "default",
    "signature": "const default: number;",
  },
]
`;

exports[`export default from module 1`] = `
[
  {
    "docs": [],
    "file": "/module.ts",
    "id": "function.default",
    "kind": "function",
    "line": 1,
    "name": "default",
    "signature": "default: () => void;",
  },
]
`;

exports[`export default named class 1`] = `
[
  {
    "constructors": [],
    "docs": [],
    "file": "/index.ts",
    "id": "class.default",
    "kind": "class",
    "line": 1,
    "methods": [],
    "name": "default",
    "properties": [],
    "signature": "class Foo {}",
  },
]
`;

exports[`export default named function 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.default",
    "kind": "function",
    "line": 1,
    "name": "default",
    "signature": "default: () => void;",
  },
]
`;

exports[`export default named generator function 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.default",
    "kind": "function",
    "line": 1,
    "name": "default",
    "signature": "default: () => Generator<never, void, unknown>;",
  },
]
`;

exports[`export empty 1`] = `[]`;

exports[`export let assignment list 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 1,
    "name": "bar",
    "signature": "let bar: number;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.foo",
    "kind": "variable",
    "line": 1,
    "name": "foo",
    "signature": "let foo: number;",
  },
]
`;

exports[`export let list 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 1,
    "name": "bar",
    "signature": "let bar: number;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.foo",
    "kind": "variable",
    "line": 1,
    "name": "foo",
    "signature": "let foo: string;",
  },
]
`;

exports[`export list 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.foo",
    "kind": "function",
    "line": 1,
    "name": "foo",
    "signature": "foo: () => void;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 2,
    "name": "bar",
    "signature": "const bar: string;",
  },
]
`;

exports[`export list as renamed 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.myFoo",
    "kind": "function",
    "line": 1,
    "name": "myFoo",
    "signature": "myFoo: () => void;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.myBar",
    "kind": "variable",
    "line": 2,
    "name": "myBar",
    "signature": "const myBar: string;",
  },
]
`;

exports[`export list as renamed from module 1`] = `
[
  {
    "docs": [],
    "file": "/module.ts",
    "id": "function.myFoo",
    "kind": "function",
    "line": 1,
    "name": "myFoo",
    "signature": "myFoo: () => void;",
  },
  {
    "docs": [],
    "file": "/module.ts",
    "id": "variable.myBar",
    "kind": "variable",
    "line": 2,
    "name": "myBar",
    "signature": "const myBar: string;",
  },
]
`;

exports[`export list as renamed to default 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.default",
    "kind": "function",
    "line": 1,
    "name": "default",
    "signature": "default: () => void;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 2,
    "name": "bar",
    "signature": "const bar: string;",
  },
]
`;

exports[`export list as renamed to string 1`] = `[]`;

exports[`export list from module 1`] = `
[
  {
    "docs": [],
    "file": "/module.ts",
    "id": "function.foo",
    "kind": "function",
    "line": 1,
    "name": "foo",
    "signature": "foo: () => void;",
  },
  {
    "docs": [],
    "file": "/module.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 2,
    "name": "bar",
    "signature": "const bar: string;",
  },
]
`;

exports[`export named class 1`] = `
[
  {
    "constructors": [],
    "docs": [],
    "file": "/index.ts",
    "id": "class.Foo",
    "kind": "class",
    "line": 1,
    "methods": [],
    "name": "Foo",
    "properties": [],
    "signature": "class Foo {}",
  },
]
`;

exports[`export named function 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.foo",
    "kind": "function",
    "line": 1,
    "name": "foo",
    "signature": "foo: () => void;",
  },
]
`;

exports[`export named generator function 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "function.generatorFoo",
    "kind": "function",
    "line": 1,
    "name": "generatorFoo",
    "signature": "generatorFoo: () => Generator<never, void, unknown>;",
  },
]
`;

exports[`export var assignment list 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 1,
    "name": "bar",
    "signature": "var bar: number;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.foo",
    "kind": "variable",
    "line": 1,
    "name": "foo",
    "signature": "var foo: number;",
  },
]
`;

exports[`export var list 1`] = `
[
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.bar",
    "kind": "variable",
    "line": 1,
    "name": "bar",
    "signature": "var bar: number;",
  },
  {
    "docs": [],
    "file": "/index.ts",
    "id": "variable.foo",
    "kind": "variable",
    "line": 1,
    "name": "foo",
    "signature": "var foo: string;",
  },
]
`;
